--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: MkLorum
+site_name: Maxandre Jacqueline's portfolio
 theme:
   name: material
   palette:
@@ -6,13 +6,18 @@ theme:
 nav:
 - 'Home': 'index.md'
 - 'Tutorials':
-  - 'Callback': 'tutorials/callback.md'
+  - 'Callbacks': 'tutorials/callback.md'
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.highlight
   - pymdownx.superfences
   - pymdownx.inlinehilite
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - attr_list
+
 extra_javascript:
   - javascripts/config.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
