--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
 - 'Home': 'index.md'
 - 'Tutorials':
   - 'Callbacks': 'tutorials/callback.md'
+  - 'Selectors': 'tutorials/selector.md'
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
